# ai-futures-sim

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: pages.yml
config/: capability_dynamics.yaml  correlations.yaml  events.yaml  sim.yaml  society_hazard.yaml  spine.yaml  terminals.yaml  variables.yaml
docs/: ARCHITECTURE.md  BUDGET.md  CALIBRATION.md  CAPABILITY_DYNAMICS.md  CHANGELOG.md  CORRELATIONS.md  EVENTS_INDEX.md  EVENT_GRAPH.mmd  PROBABILITY_MODEL.md  SOCIETY_HAZARDS.md  SPINE.md  TECHNICAL_REPORT.md  TRY_IT.md  VARIABLES.md  report.css
docs/diagrams/: daily_loop_main.mmd  daily_loop_step4.mmd
docs/evidence/: README.md  _PORT_MAP.md  ev_admin_flip_2029.md  ev_align_prod_catch.md  ev_alignment_salience_early.md  (+68 more)
scripts/: calibration_check.py  calibration_lib.py  event_impact.py  export_branching_png.mjs  export_branching_timeline.py  export_dag.py  export_sample_runs.py  export_story_paths.py  gen_evidence_batch2.py  generate_mermaid_figures.sh  generate_report_figures.py  inject_research_refs.py  path_diagnostic.py  path_frequency.py  port_research_refs.py  run_sim.py  seed_sweep.py  sensitivity_capability.py  tune_capability.py
tests/: test_capability.py  test_capability_couplings.py  test_config_integrity.py  test_correlations.py  test_engine.py  test_port_research_refs.py  test_society_hazards.py  test_spine.py  test_spine_ceiling.py  test_spine_legibility.py  test_terminal_coverage.py  test_terminals.py
web/: README.md  app.js  branching.js  export-branching.html  index.html  style.css
(+63 files in other folders)
