[project]
name = "ai-futures-sim"
version = "0.1.0"
description = "Monte Carlo event-graph simulator for AI futures (doom, utopia, friction)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Longyi" }]
dependencies = [
  "pyyaml>=6.0",
  "numpy>=1.26",
  "pandas>=2.2",
  "tqdm>=4.66",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]
viz = ["matplotlib>=3.8", "plotly>=5.20"]

[project.scripts]
futures-sim = "futures_sim.cli:main"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
